--- a/client/static/css/xt.css
+++ b/client/static/css/xt.css
@@ -814,24 +814,18 @@ body{
     align-items:stretch;
     margin: 15vh auto;
     width: 50%;
+  }
+  #profile .formedit,
+  #pwdreset .formedit{
     box-shadow: 0 0 1vh black;
   }
     #profile form > span,
     #pwdreset form > span{
       align-self: flex-end;
-      padding: 0.5vh 0.5vw;
       background-color: red;
       color: white;
       font-weight: bold;
       cursor: pointer;
-      margin: 0 0 3vh 0;
-    }
-    #profile form #err,
-    #pwdreset form #err{
-      text-align: center;
-      color: red;
-      font-weight: bold;
-      margin-bottom: 3vh;
     }
     #profile form fieldset,
     #pwdreset form fieldset{
@@ -848,27 +842,60 @@ body{
         font-size: 150%;
         font-weight: bold;
       }
+      #profile form fieldset #err,
+      #pwdreset form fieldset #err{
+        text-align: center;
+        background-color: red;
+        color: white;
+        font-weight: bold;
+        /*margin-bottom: 3vh;*/
+      }
       #profile form fieldset label,
       #pwdreset form fieldset label{
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
         margin: 3vh 0;
         font-size: 125%;
       }
-        #profile form fieldset label span,
-        #pwdreset form fieldset label span{
+        #profile form fieldset label span{
           width: 30%;
           text-align: right;
         }
-        #profile form fieldset label input{
-          border: none;
+        #pwdreset form fieldset label span{
+          width: 40%;
+          text-align: right;
         }
-        #profile form fieldset label input,
-        #pwdreset form fieldset label input{
+        #profile form fieldset label div{
           width: 65%;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+        }
+        #pwdreset form fieldset label div{
+          width: 55%;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+        }
+        #profile form fieldset label div input,
+        #pwdreset form fieldset label div input{
+          width: 100%;
           font-size: 125%;
           padding-left: 1vw;
+        }
+        #pwdreset form fieldset label div input{
+          text-align: center;
+        }
+        #profile form fieldset label div .material-icons,
+        #pwdreset form fieldset label div .material-icons{
+          color: red;
+        }
+        #profile form fieldset label .readonly,
+        #pwdreset form fieldset label .readonly{
+          border: none;
+          outline: none;
+          font-weight: bold;
         }
     #profile form > p,
     #pwdreset form > p{
